--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Yuri Lima dos Santos Silva</h1>
         <p>Desenvolvedor Android</p>
-        <p>📞 75 9 8184 5912 | 📧 <a href="mailto:yurildss@hotmail.com">yurildss@hotmail.com</a></p>
+        <p>📞 75 9 8184 5912 | 📧 yurildss@hotmail.com</p>
     </header>
 
     <section>
