--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <ul>
             <li><a href="https://github.com/yurildss/ActivityPlanner" target="_blank">Activity Planner</a></li>
             <li><a href="https://github.com/yurildss/Rental_Review" target="_blank">Rental Review</a></li>
+            <li><a href="https://github.com/yurildss/liveCity" target="_blank">Live City</a></li>
         </ul>
     </section>
 
