--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <header>
         <h1>Yuri Lima dos Santos Silva</h1>
         <p>Desenvolvedor Android</p>
-        <p>📞 75 9 8184 5912 | 📧 yurildss@hotmail.com</p>
+       <p>
+    <a href="https://wa.me/5575981845912" target="_blank" style="text-decoration:none; color:inherit;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" viewBox="0 0 448 512" style="vertical-align:middle; margin-right:5px;">
+            <path d="M380.9 97.1C339-3.7 230.2-32.3 141.5 21.6 88.4 54.1 54.2 112.8 54.2 176.1c0 29.2 7.9 57.7 22.9 82.6L24 457.5l200.7-52.6c23.2 6.4 47.2 9.6 71.1 9.6h.1c121.6 0 220.7-99.2 220.7-220.9 0-58.9-23-114.2-65.7-156.5zM296 382.4c-19.4 0-38.3-2.6-56.2-7.6l-3.9-1.1-118.7 31 31.6-115.3-2.5-4.1c-13.2-21.5-20.2-46.2-20.2-71.8 0-74.3 60.5-134.8 134.8-134.8 36 0 69.8 14 95.3 39.6 25.5 25.5 39.6 59.3 39.6 95.3-.1 74.4-60.6 134.8-134.8 134.8z"/>
+        </svg>
+        📞 75 9 8184 5912
+    </a>
+     | 📧 yurildss@hotmail.com
+</p>
+
     </header>
 
     <section>
