--- a/index.html
+++ b/index.html
@@ -1,72 +1,56 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio - Yuri Lima</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Portfólio - Yuri Lima</title>
+<link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <h1>Yuri Lima dos Santos Silva</h1>
-        <p>Desenvolvedor Android</p>
-       <p>
-    <a href="https://wa.me/5575981845912" target="_blank" style="text-decoration:none; color:inherit;">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" viewBox="0 0 448 512" style="vertical-align:middle; margin-right:5px;">
-            <path d="M380.9 97.1C339-3.7 230.2-32.3 141.5 21.6 88.4 54.1 54.2 112.8 54.2 176.1c0 29.2 7.9 57.7 22.9 82.6L24 457.5l200.7-52.6c23.2 6.4 47.2 9.6 71.1 9.6h.1c121.6 0 220.7-99.2 220.7-220.9 0-58.9-23-114.2-65.7-156.5zM296 382.4c-19.4 0-38.3-2.6-56.2-7.6l-3.9-1.1-118.7 31 31.6-115.3-2.5-4.1c-13.2-21.5-20.2-46.2-20.2-71.8 0-74.3 60.5-134.8 134.8-134.8 36 0 69.8 14 95.3 39.6 25.5 25.5 39.6 59.3 39.6 95.3-.1 74.4-60.6 134.8-134.8 134.8z"/>
-        </svg>
+<header>
+<h1>Yuri Lima dos Santos Silva</h1>
+<p>Desenvolvedor Android</p>
+<p>
+<a href="https://wa.me/5575981845912" style="text-decoration:none; color:inherit;" target="_blank">
+<svg fill="green" height="20" style="vertical-align:middle; margin-right:5px;" viewbox="0 0 448 512" width="20" xmlns="http://www.w3.org/2000/svg">
+<path d="M380.9 97.1C339-3.7 230.2-32.3 141.5 21.6 88.4 54.1 54.2 112.8 54.2 176.1c0 29.2 7.9 57.7 22.9 82.6L24 457.5l200.7-52.6c23.2 6.4 47.2 9.6 71.1 9.6h.1c121.6 0 220.7-99.2 220.7-220.9 0-58.9-23-114.2-65.7-156.5zM296 382.4c-19.4 0-38.3-2.6-56.2-7.6l-3.9-1.1-118.7 31 31.6-115.3-2.5-4.1c-13.2-21.5-20.2-46.2-20.2-71.8 0-74.3 60.5-134.8 134.8-134.8 36 0 69.8 14 95.3 39.6 25.5 25.5 39.6 59.3 39.6 95.3-.1 74.4-60.6 134.8-134.8 134.8z"></path>
+</svg>
         📞 75 9 8184 5912
     </a>
      | 📧 yurildss@hotmail.com
 </p>
+</header>
+<section>
+<h2>Objetivo</h2>
+<p>Desenvolvedor Android com experiência em Kotlin e Jetpack Compose, orientado ao desenvolvimento de aplicações escaláveis e de alto desempenho. Busco contribuir em um time inovador aplicando boas práticas de arquitetura (MVVM, Clean Architecture), integração com APIs, testes e processos CI/CD, enquanto sigo crescendo profissionalmente. Como imigrante brasileiro, acredito que posso trazer novas ideias e diferentes perspectivas que somem à diversidade da equipe.</p>
+</section><section><h2>Experiência</h2><h3>UFRB – Desenvolvedor Android (06/2024 – 12/2024)</h3><ul><li>Design e implementação de aplicação Android em Kotlin para comunicação em tempo real com dispositivo inteligente via Bluetooth.</li><li>Desenvolvimento de interface com Jetpack Compose, integração de sensores e visualização de métricas de desempenho respiratório.</li><li>Uso de MVVM, Room e Retrofit para gestão de dados, priorizando escalabilidade e usabilidade clínica.</li><li>Implementação de testes unitários com JUnit e controle de versões em GitHub.</li></ul></section>
 
-    </header>
+<section>
+<h2>Educação</h2>
+<p>🎓 UFRB - Ciências Exatas e Tecnológicas (2018 - 2024)</p>
+<p>🎓 UFRB - Engenharia de Computação (2025 - 2026)</p>
+</section><section><h2>Hard Skills</h2>
+<strong>Linguagens &amp; Frameworks:</strong><br/>
+• Kotlin, Android SDK, Jetpack Compose, XML<br/><br/>
+<strong>Arquitetura &amp; Desenvolvimento:</strong><br/>
+• MVVM, Hilt (DI), Room, Retrofit, Firebase<br/><br/>
+<strong>Testing &amp; Qualidade:</strong><br/>
+• JUnit, Espresso, CI/CD básico (GitHub Actions)<br/><br/>
+<strong>Ferramentas:</strong><br/>
+• Git/GitHub, Android Studio, SQLite
+</section>
 
-    <section>
-        <h2>Objetivo</h2>
-        <p>Iniciar minha carreira profissional como Desenvolvedor Android, aplicando meus conhecimentos em Kotlin. Busco oportunidades onde eu possa continuar aprendendo, contribuindo com soluções inovadoras e crescendo junto com a equipe.</p>
-    </section>
-
-    <section>
-        <h2>Experiência</h2>
-        <h3>UFRB - Desenvolvedor Android <small>(06/2024 - 12/2024)</small></h3>
-        <ul>
-            <li>Desenvolvimento de aplicativo Android para comunicação com dispositivo inteligente de avaliação e treinamento da força muscular respiratória, criado em parceria com a UFBA.</li>
-            <li>Design e implementação de uma aplicação mobile com conectividade Bluetooth, permitindo troca de dados em tempo real com o hardware desenvolvido.</li>
-            <li>Integração de sensores para análise respiratória e exibição de métricas no app, com foco em usabilidade e acompanhamento clínico.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Educação</h2>
-        <p>🎓 UFRB - Ciências Exatas e Tecnológicas (2018 - 2024)</p>
-        <p>🎓 UFRB - Engenharia de Computação (2025 - 2026)</p>
-    </section>
-
-    <section>
-        <h2>Hard Skills</h2>
-        <ul>
-            <li>Jetpack Compose</li>
-            <li>Kotlin</li>
-            <li>MVVM</li>
-            <li>Firebase</li>
-            <li>Retrofit</li>
-            <li>JUnit</li>
-            <li>Hilt</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Projetos</h2>
-        <ul>
-            <li><a href="https://github.com/yurildss/ActivityPlanner" target="_blank">Activity Planner</a></li>
-            <li><a href="https://github.com/yurildss/Rental_Review" target="_blank">Rental Review</a></li>
-            <li><a href="https://github.com/yurildss/liveCity" target="_blank">Live City</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>© 2025 - Yuri Lima</p>
-    </footer>
+<section>
+<h2>Projetos</h2>
+<ul>
+<li><a href="https://github.com/yurildss/ActivityPlanner" target="_blank">Activity Planner</a></li>
+<li><a href="https://github.com/yurildss/Rental_Review" target="_blank">Rental Review</a></li>
+<li><a href="https://github.com/yurildss/liveCity" target="_blank">Live City</a></li>
+</ul>
+</section>
+<footer>
+<p>© 2025 - Yuri Lima</p>
+</footer>
 </body>
 </html>
